Changes in <next release>:
 * Fix transparency with bar plot
 * Add File->Reload menu option to reload from saved document
 * Add tooltip to items in FieldWidget showing widget path
 * Use getcwdu() for python2 to avoid bugs combining paths
 * Handle inf/nan when converting to human readable form in plots

Changes in 1.23.2:
 * Add data clipping dataset plugin
 * Fix boxplot with manual settings
 * Fix plugin normalize and divide by maximum for new numpy versions
 * Avoid error in 2d data creation
 * Fix problems with unicode characters in plugins in Python 2.x
 * Clip axis to sensible range -1e100->1e100
 * Handle unicode errors from operating system in Veusz scripts
 * Handle unicode errors in error reports
 * Fix crash in \color

Changes in 1.23.1:
 * Enable compression in exported files (Benjamin K. Stuhl)
 * Fix saving histogram datasets
 * Add option to "thin" error bars plotted
 * Fix label colour in contour labelling
 * Remove use of deprecated Qt functions
 * Fix clone widget tools plugin
 * Fix EPS/PDF crash with broken axis widget
 * Do not crash filter plugin if using date datatype
 * Avoid crashes in normalise, subtract minimum and divide maximum plugins
 * Avoid crash in image widget
 * Avoid issue in identifying spacing in 1D->2D conversion
 * Add Gnuplot 2D data import plugin (Joerg Meyer)
 * When loading data from import plugins, provide default values
 * Remove some deprecated Qt uses
 * Fix issue when plotting non-plain datasets with nan values

Changes in 1.23:
 * Add new export dialog box which can export multiple pages and
   modify the export options
 * Add new dataset filtering dialog
 * Add cubehelix() functional colormap
 * Add -stepN suffix for colormaps to make arbitrary numbers of steps
 * Fix incorrect colors in log images and log color scales
 * Fix unsafe commands not being run

Minor changes
 * Fix incorrect use of None in (x,...) pattern
 * Catch crash if plotting nan/inf value in log space